--- a/Customers/Customers.vcxproj.filters
+++ b/Customers/Customers.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="main_customer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Customer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\GasStationSimu\rt.h">
