--- a/GasStationSimu/pump/pump.vcxproj
+++ b/GasStationSimu/pump/pump.vcxproj
@@ -117,10 +117,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\rt.h" />
+    <ClInclude Include="GasTank.h" />
     <ClInclude Include="Pump.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\rt.cpp" />
+    <ClCompile Include="GasTank.cpp" />
     <ClCompile Include="main_pump.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
