--- a/GasStationSimu/GasStationSimu.vcxproj
+++ b/GasStationSimu/GasStationSimu.vcxproj
@@ -117,11 +117,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="PumpDataCollection.h" />
+    <ClInclude Include="pump\GasTank.h" />
     <ClInclude Include="rt.h" />
+    <ClInclude Include="Transaction.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="GSC.cpp" />
     <ClCompile Include="mainWindow.cpp" />
+    <ClCompile Include="pump\GasTank.cpp" />
     <ClCompile Include="rt.cpp" />
+    <ClCompile Include="transaction.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
